1. 관리자 페이지 접근 처리.

--- a/grgrowth/src/main/webapp/WEB-INF/web.xml
+++ b/grgrowth/src/main/webapp/WEB-INF/web.xml
@@ -54,4 +54,13 @@
 			<role-name></role-name>
 		</auth-constraint>
 	</security-constraint>
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/error/ERROR_404.html</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error/ERROR_500.html</location>
+	</error-page>
 </web-app>
